@@ -104,6 +104,9 @@ Release 0.5.0 -  Unreleased
     HIVE-1036. Add API Method to Query HiveConf Values of the Metastore.
     (Paul Yang via zshao)
 
+    HIVE-1106. Support ALTER TABLE t ADD IF NOT EXIST PARTITION.
+    (Paul Yang via zshao)
+
   IMPROVEMENTS
 
     HIVE-760. Add version info to META-INF/MANIFEST.MF.
